--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,9 @@
     "com.unity.timeline": "1.4.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "10.3.2",
+    "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
+    "com.unity.xr.management": "3.2.16",
+    "com.unity.xr.oculus": "1.7.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
